--- a/clients/admin-ui/nginx/conf.d/admin-ui.conf
+++ b/clients/admin-ui/nginx/conf.d/admin-ui.conf
@@ -25,8 +25,10 @@ server {
 
     location ~ /api/ {
 
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
+        client_max_body_size               5M;
+
+        proxy_http_version                 1.1;
+        proxy_set_header Upgrade           $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
