--- a/nginx/conf.d/admin.conf
+++ b/nginx/conf.d/admin.conf
@@ -33,6 +33,8 @@ server {
 
     location / {
 
+        client_max_body_size               5M;
+
         proxy_pass                         http://admin;
         proxy_http_version                 1.1;
         proxy_cache_bypass                 $http_upgrade;
