--- a/ui.packages/mobile-kit/package.json
+++ b/ui.packages/mobile-kit/package.json
@@ -19,7 +19,7 @@
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
     "redux-form": "8.3.7",
-    "react-input-mask": "2.0.4",
+    "react-input-mask": "3.0.0-alpha.2",
     "react-router-dom": "6.0.0-beta.0"
   },
   "devDependencies": {
