--- a/nginx/conf.d/admin.conf
+++ b/nginx/conf.d/admin.conf
@@ -5,7 +5,7 @@ upstream admin {
 
 server {
     listen 80;
-    server_name admin.osetpr.ru;
+    server_name ${ADMIN_HOST};
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -17,65 +17,18 @@ server {
 }
 
 server {
-    listen 80;
-    server_name stage.admin.osetpr.ru;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-
-server {
     listen 443 ssl;
 
-    server_name admin.osetpr.ru stage.admin.osetpr.ru;
+    server_name stage.admin.osetpr.ru;
 
-    ssl_certificate /etc/letsencrypt/live/admin.osetpr.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/admin.osetpr.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${ADMIN_HOST}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${ADMIN_HOST}/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://admin.osetpr.ru$request_uri; }
-
-    location / {
-
-        client_max_body_size               5M;
-
-        proxy_pass                         http://admin;
-        proxy_http_version                 1.1;
-        proxy_cache_bypass                 $http_upgrade;
-
-        proxy_set_header Upgrade           $http_upgrade;
-        proxy_set_header Connection        "upgrade";
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host  $host;
-        proxy_set_header X-Forwarded-Port  $server_port;
-    }
-}
-
-server {
-    listen 443 ssl;
-
-    server_name stage.admin.osetpr.ru;
-
-    ssl_certificate /etc/letsencrypt/live/stage.admin.osetpr.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/stage.admin.osetpr.ru/privkey.pem;
-
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://stage.admin.osetpr.ru$request_uri; }
+    if ($https_redirect = 1) { return 301 https://${ADMIN_HOST}$request_uri; }
 
     location / {
 
