--- a/nginx/conf.d/client.conf
+++ b/nginx/conf.d/client.conf
@@ -14,7 +14,7 @@ map $http_user_agent $webroot {
 
 server {
     listen 80;
-    server_name osetpr.ru;
+    server_name ${CLIENT_HOST};
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -24,34 +24,20 @@ server {
         return 301 https://$host$request_uri;
     }
 }
-
-server {
-    listen 80;
-    server_name stage.osetpr.ru;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
 
 server {
     listen 443 ssl;
 
     server_name stage.osetpr.ru;
 
-    ssl_certificate /etc/letsencrypt/live/stage.osetpr.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/stage.osetpr.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${CLIENT_HOST}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${CLIENT_HOST}/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://stage.osetpr.ru$request_uri; }
+    if ($https_redirect = 1) { return 301 https://${CLIENT_HOST}$request_uri; }
 
     location / {
 
