--- a/nginx/conf.d/order.conf
+++ b/nginx/conf.d/order.conf
@@ -5,7 +5,7 @@ upstream order {
 
 server {
     listen 80;
-    server_name order.osetpr.ru stage.order.osetpr.ru;
+    server_name ${ORDER_HOST};
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -13,80 +13,22 @@ server {
 
     location / {
         return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 80;
-    server_name order.osetpr.ru;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 80;
-    server_name stage.order.osetpr.ru;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-
-server {
-    listen 443 ssl;
-
-    server_name order.osetpr.ru;
-
-    ssl_certificate /etc/letsencrypt/live/order.osetpr.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/order.osetpr.ru/privkey.pem;
-
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://order.osetpr.ru$request_uri; }
-
-    location / {
-
-        proxy_pass                         http://order;
-        proxy_http_version                 1.1;
-        proxy_cache_bypass                 $http_upgrade;
-
-        proxy_set_header Upgrade           $http_upgrade;
-        proxy_set_header Connection        "upgrade";
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host  $host;
-        proxy_set_header X-Forwarded-Port  $server_port;
     }
 }
 
 server {
     listen 443 ssl;
 
-    server_name stage.order.osetpr.ru;
+    server_name ${ORDER_HOST};
 
-    ssl_certificate /etc/letsencrypt/live/order.osetpr.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/stage.order.osetpr.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${ORDER_HOST}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${ORDER_HOST}/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://stage.order.osetpr.ru$request_uri; }
+    if ($https_redirect = 1) { return 301 https://${ORDER_HOST}$request_uri; }
 
     location / {
 
