--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,11 @@ error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 
+env ORDER_HOST;
+env CLIENT_HOST;
+env ADMIN_HOST;
+
+
 events {
   worker_connections  1024;
 }
