--- a/stage-docker-compose.yml
+++ b/stage-docker-compose.yml
@@ -368,9 +368,9 @@ services:
       - 80:80
       - 443:443
     environment:
-      NG_CLIENT_HOST: 'stage.osetpr.ru'
-      NG_ADMIN_HOST: 'stage.admin.osetpr.ru'
-      NG_ORDER_HOST: 'stage.order.osetpr.ru'
+      NG_CLIENT_HOST: stage.osetpr.ru
+      NG_ADMIN_HOST: stage.admin.osetpr.ru
+      NG_ORDER_HOST: stage.order.osetpr.ru
     volumes:
       - ./nginx/init-letsencrypt.sh:/etc/nginx/init-letsencrypt.sh
       - ./nginx/conf.d:/etc/nginx/conf.d
