--- a/nginx/conf.d/admin.conf
+++ b/nginx/conf.d/admin.conf
@@ -5,7 +5,7 @@ upstream admin {
 
 server {
     listen 80;
-    server_name $NGINX_ADMIN_HOST;
+    server_name $ENV{"NGINX_ADMIN_HOST"};
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -19,10 +19,10 @@ server {
 server {
     listen 443 ssl;
 
-    server_name $NGINX_ADMIN_HOST;
+    server_name $ENV{"NGINX_ADMIN_HOST"};
 
-    ssl_certificate /etc/letsencrypt/live/$NGINX_ADMIN_HOST/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/$NGINX_ADMIN_HOST/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/$ENV{"NGINX_ADMIN_HOST"}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/$ENV{"NGINX_ADMIN_HOST"}/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
