--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,8 @@ worker_processes  1;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
+env NGINX_ADMIN_HOST;
+
 events {
   worker_connections  1024;
 }
