--- a/stage-docker-compose.yml
+++ b/stage-docker-compose.yml
@@ -382,4 +382,4 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
 #    command: '/bin/sh -c ''while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'''
-    command: `/bin/bash -c "envsubst < /etc/nginx/conf.d/* > /etc/nginx/conf.d/ && exec nginx -g 'daemon off;'"`
+    command: '/bin/bash -c "envsubst < /etc/nginx/conf.d/* > /etc/nginx/conf.d/ && exec nginx -g ''daemon off;''"'
