--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ worker_processes  1;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
-env NGINX_ADMIN_HOST=${NGINX_ADMIN_HOST};
+env NGINX_ADMIN_HOST=stage.admin.osetpr.ru;
 
 events {
   worker_connections  1024;
