--- a/nginx/conf.d/admin.conf
+++ b/nginx/conf.d/admin.conf
@@ -5,7 +5,7 @@ upstream admin {
 
 server {
     listen 80;
-    server_name ${NGINX_ADMIN_HOST};
+    server_name ${nginx_admin_host};
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -19,16 +19,16 @@ server {
 server {
     listen 443 ssl;
 
-    server_name ${NGINX_ADMIN_HOST};
+    server_name ${nginx_admin_host};
 
-    ssl_certificate /etc/letsencrypt/live/${NGINX_ADMIN_HOST}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${NGINX_ADMIN_HOST}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${nginx_admin_host}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${nginx_admin_host}/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://${NGINX_ADMIN_HOST}$request_uri; }
+    if ($https_redirect = 1) { return 301 https://${nginx_admin_host}$request_uri; }
 
     location / {
 
