--- a/nginx/conf.d/admin.conf
+++ b/nginx/conf.d/admin.conf
@@ -1,14 +1,11 @@
 
-set_by_lua $admin_host 'return os.getenv("ADMIN_HOST")';
-
-
 upstream admin {
     server admin_ui;
 }
 
 server {
     listen 80;
-    server_name $admin_host;
+    server_name stage.admin.osetpr.ru;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -22,16 +19,16 @@ server {
 server {
     listen 443 ssl;
 
-    server_name $admin_host;
+    server_name stage.admin.osetpr.ru;
 
-    ssl_certificate /etc/letsencrypt/live/$admin_host/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/$admin_host/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/stage.admin.osetpr.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/stage.admin.osetpr.ru/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://$admin_host$request_uri; }
+    if ($https_redirect = 1) { return 301 https://stage.admin.osetpr.ru$request_uri; }
 
     location / {
 
