--- a/ui.packages/admin-kit/package.json
+++ b/ui.packages/admin-kit/package.json
@@ -21,15 +21,15 @@
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
-    "react-dadata": "2.12.0",
+    "react-dadata": "2.13.0",
     "react-dom": "17.0.2",
-    "react-input-mask": "2.0.4",
-    "react-router-dom": "6.0.0-beta.0",
+    "react-input-mask": "3.0.0-alpha.2",
+    "react-router-dom": "6.0.0-beta.8",
     "react-sortable-hoc": "2.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.15.7",
-    "@babel/core": "7.15.8",
+    "@babel/cli": "7.16.0",
+    "@babel/core": "7.16.0",
     "cross-env": "7.0.3",
     "resolve": "1.20.0"
   },
