--- a/ui.packages/mobile-kit/package.json
+++ b/ui.packages/mobile-kit/package.json
@@ -10,21 +10,21 @@
   },
   "dependencies": {
     "@packages/numeral": "1.0.0",
-    "@ui.packages/theme-2": "1.0.0",
-    "@ui.packages/request": "1.0.0",
     "@ui.packages/order": "1.0.0",
+    "@ui.packages/request": "1.0.0",
+    "@ui.packages/theme-2": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.5",
-    "redux-form": "8.3.7",
     "react-input-mask": "3.0.0-alpha.2",
-    "react-router-dom": "6.0.0-beta.0"
+    "react-redux": "7.2.6",
+    "react-router-dom": "6.0.0-beta.8",
+    "redux-form": "8.3.7"
   },
   "devDependencies": {
-    "@babel/cli": "7.15.7",
-    "@babel/core": "7.15.8",
+    "@babel/cli": "7.16.0",
+    "@babel/core": "7.16.0",
     "cross-env": "7.0.3",
     "resolve": "1.20.0"
   },
