--- a/clients/mobile-ui/package.json
+++ b/clients/mobile-ui/package.json
@@ -17,7 +17,7 @@
     "@ui.packages/menu": "1.0.0",
     "@ui.packages/mobile-dialog": "1.0.0",
     "@ui.packages/mobile-kit": "1.0.0",
-    "@ui.packages/notifications": "1.0.0",
+    "@ui.packages/mobile-notifications": "1.0.0",
     "@ui.packages/order": "1.0.0",
     "@ui.packages/theme": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
