--- a/modules/mobile/main/package.json
+++ b/modules/mobile/main/package.json
@@ -9,16 +9,14 @@
     "start:dev": "cross-env NODE_ENV=development babel src --out-dir ./lib --copy-files --watch"
   },
   "dependencies": {
-    "@packages/errors": "1.0.0",
-    "@reduxjs/toolkit": "1.5.0",
     "@ui.packages/hoc": "1.0.0",
     "@ui.packages/mobile-kit": "1.0.0",
-    "@ui.packages/notifications": "1.0.0",
+    "@ui.packages/mobile-notifications": "1.0.0",
     "@ui.packages/order": "1.0.0",
     "@ui.packages/request": "1.0.0",
     "@ui.packages/socket": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
-    "@ui.packages/types": "1.0.0",
+    "@reduxjs/toolkit": "1.5.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
