--- a/ui.packages/order/package.json
+++ b/ui.packages/order/package.json
@@ -6,6 +6,7 @@
   "main": "./src/index.js",
   "dependencies": {
     "@ui.packages/request": "1.0.0",
+    "@ui.packages/mobile-notifications": "1.0.0",
     "@reduxjs/toolkit": "1.5.0"
   }
 }
