--- a/clients/mobile-ui/package.json
+++ b/clients/mobile-ui/package.json
@@ -13,7 +13,7 @@
     "@modules/mobile-main": "1.0.0",
     "@modules/mobile-order": "1.0.0",
     "@modules/mobile-product": "1.0.0",
-    "@ui.packages/application": "1.0.0",
+    "@ui.packages/mobile-application": "1.0.0",
     "@ui.packages/menu": "1.0.0",
     "@ui.packages/mobile-dialog": "1.0.0",
     "@ui.packages/mobile-kit": "1.0.0",
