--- a/modules/mobile/product/package.json
+++ b/modules/mobile/product/package.json
@@ -13,7 +13,7 @@
     "@reduxjs/toolkit": "1.5.0",
     "@ui.packages/hoc": "1.0.0",
     "@ui.packages/mobile-kit": "1.0.0",
-    "@ui.packages/notifications": "1.0.0",
+    "@ui.packages/mobile-notifications": "1.0.0",
     "@ui.packages/order": "1.0.0",
     "@ui.packages/request": "1.0.0",
     "@ui.packages/socket": "1.0.0",
