--- a/services/push-srv/package.json
+++ b/services/push-srv/package.json
@@ -24,6 +24,8 @@
     "web-push": "3.4.5"
   },
   "devDependencies": {
-    "nodemon": "2.0.14"
+    "cross-env": "7.0.3",
+    "nodemon": "2.0.14",
+    "sequelize-cli": "6.3.0"
   }
 }
