--- a/services/order-srv/.env
+++ b/services/order-srv/.env
@@ -24,6 +24,8 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 QUEUE_MAIL_ORDER_CREATE = MAIL_SRV.order.create
 QUEUE_MAIL_ORDER_UPDATE = MAIL_SRV.order.update
 
+QUEUE_PUSH_ORDER_UPDATE = PUSH_SRV.order.update
+
 
 #RABBIT EXCHANGE
 
