--- a/services/push-srv/.env.stage
+++ b/services/push-srv/.env.stage
@@ -28,5 +28,4 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 #RABBIT QUEUE
 
-QUEUE_SMS_ORDER_CREATE = SMS_SRV.order.create
-QUEUE_SMS_ORDER_UPDATE = SMS_SRV.order.update
+QUEUE_PUSH_ORDER_UPDATE = PUSH_SRV.order.update
