--- a/nginx/conf.stage.d/client.conf
+++ b/nginx/conf.stage.d/client.conf
@@ -39,6 +39,10 @@ server {
     if ($host ~ '^www\.') { set $https_redirect 1; }
     if ($https_redirect = 1) { return 301 https://stage.osetpr.ru$request_uri; }
 
+    location ~ push-notification.js {
+      add_header Content-Type application/x-javascript;
+    }
+
     location / {
 
         proxy_pass                         http://$webroot;
