--- a/clients/mobile-ui/public/manifest.json
+++ b/clients/mobile-ui/public/manifest.json
@@ -11,5 +11,9 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "background": {
+    "service_worker": "push-notification.js",
+    "type": "module"
+  }
 }
