--- a/clients/mobile-ui/nginx/conf.d/mobile-ui.conf
+++ b/clients/mobile-ui/nginx/conf.d/mobile-ui.conf
@@ -36,7 +36,7 @@ server {
     }
 
     location = /service-worker.js {
-       add_header Content-Type text/plain;
+       add_header Content-Type application/x-javascript;
        try_files $uri $uri/ /service-worker.js =404;
     }
 
