--- a/clients/mobile-ui/nginx/conf.d/mobile-ui.conf
+++ b/clients/mobile-ui/nginx/conf.d/mobile-ui.conf
@@ -35,10 +35,12 @@ server {
         proxy_pass http://api-server;
     }
 
-    location = /service-worker.js {
-       add_header Content-Type application/x-javascript;
+    location /service-worker.js {
+
+       add_header Content-Type application/javascript;
+
        try_files $uri $uri/ /service-worker.js =404;
-    }
+   }
 
     location / {
 
