--- a/ui.packages/mobile-kit/package.json
+++ b/ui.packages/mobile-kit/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@packages/numeral": "1.0.0",
+    "@packages/moment": "1.0.0",
     "@ui.packages/order": "1.0.0",
     "@ui.packages/request": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
