--- a/modules/mobile/order-draft/package.json
+++ b/modules/mobile/order-draft/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@packages/errors": "1.0.0",
     "@packages/numeral": "1.0.0",
+    "@packages/moment": "1.0.0",
     "@reduxjs/toolkit": "1.5.0",
     "@ui.packages/hoc": "1.0.0",
     "@ui.packages/mobile-dialog": "1.0.0",
