--- a/gateway/admin-gw/package.json
+++ b/gateway/admin-gw/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@packages/errors": "1.0.0",
+    "@packages/moment": "1.0.0",
     "@sys.packages/db": "1.0.0",
     "@sys.packages/jwt": "1.0.0",
     "@sys.packages/logger": "1.0.0",
