--- a/services/order-srv/package.json
+++ b/services/order-srv/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@packages/errors": "1.0.0",
     "@packages/moment": "1.0.0",
+    "@packages/numeral": "1.0.0",
     "@sys.packages/db": "1.0.0",
     "@sys.packages/logger": "1.0.0",
     "@sys.packages/rabbit": "1.0.0",
