--- a/services/comment-srv/package.json
+++ b/services/comment-srv/package.json
@@ -8,7 +8,7 @@
     "migration:dev": "cross-env NODE_ENV=development sequelize-cli db:migrate",
     "seed": "cross-env NODE_ENV=production sequelize-cli db:seed:all",
     "seed:dev": "cross-env NODE_ENV=development sequelize-cli db:seed:all",
-    "start": "yarn run migration && node -r dotenv/config --experimental-modules --es-module-specifier-resolution=node src/index.mjs dotenv_config_path=./.env",
+    "start": "yarn run migration && node -r dotenv/config --experimental-modules --es-module-specifier-resolution=node ./src/index.mjs dotenv_config_path=./.env",
     "start:dev": "nodemon --exec node -r dotenv/config --experimental-modules --es-module-specifier-resolution=node ./src/index.mjs dotenv_config_path=./.env"
   },
   "dependencies": {
