--- a/gateway/client-gw/.env.stage
+++ b/gateway/client-gw/.env.stage
@@ -26,6 +26,7 @@ GALLERY_API_SRV = http://gallery_srv:8080/api/v1
 ORDER_API_SRV = http://order_srv:8080/api/v1
 PRODUCT_API_SRV = http://product_srv:8080/api/v1
 PUSH_API_SRV = http://push_srv:8080/api/v1
+COMMENT_API_SRV = http://comment_srv:8080/api/v1
 
 
 # RABBIT CONNECTION
