--- a/modules/mobile/comments/package.json
+++ b/modules/mobile/comments/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ui.packages/mobile-kit": "1.0.0",
+    "@ui.packages/mobile-dialog": "1.0.0",
     "@ui.packages/hoc": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
     "@reduxjs/toolkit": "1.5.0",
